# ToTopSkills

./: .gitignore  README.md  main.py  pyproject.toml
OIDC_Learn/: auth_server.py  authlib_provider.py  client_server.py  erorr.html
async/: 1.py  async.py
async_learn/: 1.py  2.py  fast_main.py
async_learn/learn_dramatiq/: cli.py  test.py
gitlearn/: g4.py  git_1.py  git_2.py  git_test.py  grus.py  new_git.py  newgit.py
kafka/: kafka_service.py  producer.py
lab/: client.py  lab4.py
leetcode/: heap.py
leetcode/arrays/: main.py
leetcode/top_interview/easy/: alg_sets.py  alg_sorted.py  alg_str.py  array.py  dp.py  hash_map.py  linked_list.py  tree.py
leetcode/top_interview/medium/: array.py  design.py  hash_map.py  linked_list.py  sorting_search.py  stack.py
nginx+gunicorn/: Dockerfile  docker-compose.yaml  main.py
nginx+gunicorn/nginx/conf.d/: app.conf
oop/: oop.py
pattern/facroty_method/: example.py
topSkills/: 10Chapter_Pattern.py  12-16Chapter.py  17Chapter.py  19Chapter.py  1Chapter.py  22Chapter.py  2Chapter.py  5Chapter_Data_Class_Builder.py  6Chapter.py  9Chapter_Decorators&Closures.py
yandex_alg/: alg1.py  alg2.py  alg3.py  alg4.py  kontest.py
yandex_alg/tranning_6/: 21  25  firts_lession.py  two_lesson.py
