[tool.poetry]
name = "totopskills"
version = "0.1.0"
description = ""
authors = ["sai <saidyllapashaev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kafka-python = "^2.0.2"
pygame = "^2.5.2"
websocket = "^0.2.1"
websockets = "^12.0"
aiohttp = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
